Updated the dashboard and set up the statistics page

--- a/frontend/swag/nightDash.html
+++ b/frontend/swag/nightDash.html
@@ -103,6 +103,148 @@
     #body{
       -webkit-animation-duration: 3s;
     }
+
+    #container{
+        margin-right: 20px;
+    }
+
+    #contentPage{
+      background-image: url("step1.jpg");
+      z-index: -2;
+    }
+    #contentPage2{
+      background-image: url("step2.jpg");
+      z-index: -2;
+    }
+    #contentPage3{
+      background-image: url("step3.jpg");
+      z-index: -2;
+    }
+    #contentPage4{
+      background-image: url("step4.jpg");
+      z-index: -2;
+    }
+    #contentPage5{
+      background-image: url("step5.jpg");
+      z-index: -2;
+    }
+    #contentPage6{
+      background-image: url("step6.jpg");
+      z-index: -2;
+    }
+
+    #layer1{
+    z-index: -1;
+    background: rgba(231, 76, 60, 0.5);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    }
+
+    #layer1:hover{
+      background: rgba(231, 76, 60, 0.8);
+      -o-transition:.5s;
+      -ms-transition:.5s;
+      -moz-transition:.5s;
+      -webkit-transition:.5s;
+
+    transition:.5s;
+    }
+    #layer2{
+    z-index: -1;
+    background: rgba(52, 152, 219, 0.5);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    }
+    #layer2:hover{
+      background: rgba(52, 152, 219, 0.8);
+      -o-transition:.5s;
+      -ms-transition:.5s;
+      -moz-transition:.5s;
+      -webkit-transition:.5s;
+
+    transition:.5s;
+    }
+    #layer3{
+    z-index: -1;
+    background: rgba(46, 204, 113, 0.5);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    }
+    #layer3:hover{
+      background: rgba(46, 204, 113, 0.8);
+      -o-transition:.5s;
+      -ms-transition:.5s;
+      -moz-transition:.5s;
+      -webkit-transition:.5s;
+
+    transition:.5s;
+    }
+    #layer4{
+    z-index: -1;
+    background: rgba(155, 89, 182, 0.5);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    }
+    #layer4:hover{
+      background: rgba(155, 89, 182, 0.8);
+      -o-transition:.5s;
+      -ms-transition:.5s;
+      -moz-transition:.5s;
+      -webkit-transition:.5s;
+
+    transition:.5s;
+    }
+
+    #layer5{
+    z-index: -1;
+    background: rgba(241, 196, 15, 0.5);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    }
+    #layer5:hover{
+      background: rgba(241, 196, 15, 0.8);
+      -o-transition:.5s;
+      -ms-transition:.5s;
+      -moz-transition:.5s;
+      -webkit-transition:.5s;
+
+    transition:.5s;
+    }
+    #layer6{
+    z-index: -1;
+    background: rgba(52, 73, 94, 0.5);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    }
+    #layer6:hover{
+      background: rgba(52, 73, 94, 0.8);
+      -o-transition:.5s;
+      -ms-transition:.5s;
+      -moz-transition:.5s;
+      -webkit-transition:.5s;
+
+    transition:.5s;
+    }
+
+    }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -116,8 +258,8 @@
 
       <button style = "float: right; border-radius: 50%;border:1px solid #000;"type="button" class="btn btn-danger btn-xs" onclick="w3_close()">X</button><br/>
 
-    <a href="newDash.HTML" class="w3-bar-item w3-button w3-padding-16" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif">home<i class="glyphicon glyphicon-home" style = "float: right;"></i></a>
-<a href="settings.HTML" class="w3-bar-item w3-button w3-padding-16" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif"> settings<i class="glyphicon glyphicon-user" style = "float: right;"></i></a>
+    <a href="nightDash.HTML" class="w3-bar-item w3-button w3-padding-16" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif">home<i class="glyphicon glyphicon-home" style = "float: right;"></i></a>
+<a href="newSettings.HTML" class="w3-bar-item w3-button w3-padding-16" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif"> settings<i class="glyphicon glyphicon-user" style = "float: right;"></i></a>
   <a href="statistics.HTML" class="w3-bar-item w3-button w3-padding-24" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif">statistics<i class="glyphicon glyphicon-file" style = "float: right;"></i></a>
 </div>
 
@@ -132,6 +274,8 @@
   <div id = "mainContent" style = "font-family:'Raleway',sans-serif">
     <h1 style = "text-align: center;">activity dashboard</h1>
     <hr style = "margin:5px 5px; margin-left: 35%; margin-right: 35%;border:0;border-top:2px solid #000;"/>
+    <br/>
+    <br/>
     <div id="abc">
 
     <!-- Popup Div Starts Here -->
@@ -165,7 +309,59 @@
     <!-- Popup Div Ends Here -->
     </div>
     <!-- Display Popup Button -->
-    <button id="popup" onclick="div_show()" style = "margin-left: 48%; margin-top: 15%;">Click</button>
+    <!-- Navigation -->
+
+    <div a href = " " onclick = "div_show()" id = "contentPage" style = "height: 35%; background-size: cover;background-position: center;background-repeat: no-repeat; border:4px solid #000;">
+          <h1 style = "float: right; color: white;margin-right: 2%; z-index: 1; margin-top: 16%; overflow: none;"><b>physical timer</b></h1>
+            <div id = "layer1" style = "z-index: -1;">
+
+            </div>
+
+
+    </div>
+    <div a href = " " onclick = "div_show()" id = "contentPage2" style = "height: 35%; background-size: cover;background-position: center;background-repeat: no-repeat;border:4px solid #000;">
+      <h1 style = "float: right; color: white;margin-right: 2%; z-index: 1; margin-top: 16%; overflow: none;"><b>operation timer</b></h1>
+        <div id = "layer2" style = "z-index: -1;">
+
+        </div>
+    </div>
+
+    <div a href = " " onclick = "div_show()" id = "contentPage3" style = "height: 35%; background-size: cover;background-position: center;background-repeat: no-repeat;border:4px solid #000;">
+      <h1 style = "float: right; color: white;margin-right: 2%; z-index: 1; margin-top: 16%; overflow: none;"><b>blood timer</b></h1>
+        <div id = "layer3" style = "z-index: -1;">
+
+        </div>
+    </div>
+
+    <div a href = " " onclick = "div_show()" id = "contentPage4" style = "height: 35%; background-size: cover;background-position: center;background-repeat: no-repeat;border:4px solid #000;">
+      <h1 style = "float: right; color: white;margin-right: 2%; z-index: 1; margin-top: 16%; overflow: none;"><b>vital timer</b></h1>
+        <div id = "layer4" style = "z-index: -1;">
+
+        </div>
+    </div>
+
+    <div a href = " " onclick = "div_show()" id = "contentPage5" style = "background-color: #2c3e50;height: 35%; background-size: cover;background-position: center;background-repeat: no-repeat;border:4px solid #000;">
+      <h1 style = "float: right; color: white;margin-right: 2%; z-index: 1; margin-top: 16%; overflow: none;"><b>x-ray timer</b></h1>
+        <div id = "layer5" style = "z-index: -1;">
+
+        </div>
+    </div>
+
+    <div a href = " " onclick = "div_show()" id = "contentPage6" style = "background-color: #95a5a6;height: 35%; background-size: cover;background-position: center;background-repeat: no-repeat; border:4px solid #000;">
+      <h1 style = "float: right; color: white;margin-right: 2%; z-index: 1; margin-top: 16%; overflow: none;"><b>diagnostic timer</b></h1>
+        <div id = "layer6" style = "z-index: -1;">
+
+        </div>
+    </div>
+
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!--<button id="popup" onclick="div_show()" style = "margin-left: 48%; margin-top: 15%;">Click</button>-->
   </div>
   </div>
 <script>
