Finalized changes for Sprint 1 and added comments for better readability/understanding

--- a/frontend/swag/index.html
+++ b/frontend/swag/index.html
@@ -37,6 +37,9 @@
             width: 100%;
         }
     }
+    /*
+      This is the login bubbles...
+    */
     input {
     background: transparent;
     border-radius: 0.5em;
@@ -59,7 +62,7 @@
 <body id="page-top">
     <!-- Navigation -->
 
-
+    <!-- PRETTY SELF EXPLANATORY HTML CODE.....contains the title....and then a form with username and password with button to go to dashboard.-->
 
 
     <header class="masthead">
@@ -67,7 +70,7 @@
         <div class="header-content">
 
             <div class="header-content-inner">
-              <h1 class="bounceIn" id = "homeHeading">REVEAL</h1>
+              <h1 id = "homeHeading">REVEAL</h1>
 
                 <hr>
                 <p>Please login with your credentials below!</p>
