--- a/frontend/swag/newSettings.html
+++ b/frontend/swag/newSettings.html
@@ -1,27 +1,8 @@
 <html>
   <head>
+    <!-- THIS PAGE IS PRETTY SELF EXPLAANATORY.....SAME AS OTHERS BUT THERE ARE TOGGLE BUTTONS FOR THE DIFFERENT PICTURES-->
     <style>
     @import "http://fonts.googleapis.com/css?family=Raleway";
-    #abc {
-    width:100%;
-    height:100%;
-    opacity:.85;
-    top:0;
-    left:0;
-    display:none;
-    position:fixed;
-    background-color:#a8a8a8;
-    overflow:auto
-    }
-
-    div#popupContact {
-    position:absolute;
-    left:50%;
-    top:17%;
-    margin-left:-202px;
-    font-family:'Raleway',sans-serif
-    }
-
     hr {
     margin:10px 60px;
     margin-left: 8%;
@@ -29,79 +10,11 @@
     border-top:1px solid #ccc
     }
 
-
-    #timeStamp{
-      text-align: center;
-      color: #ffffff
-    }
-    #button-start {
-    text-decoration:none;
-    width:50%;
-    margin-left: 25%;
-    text-align:center;
-    display:block;
-    background-color:#2ecc71;
-    color:#fff;
-    border:1px solid #FFCB00;
-
-    font-size:20px;
-    cursor:pointer;
-    border-radius:5px
-    }
-
-    #popupContact{
-      align-content: bottom;
-    }
     #wrapper{
       text-align: center;
       align-content: center;
-
-
-
-    }
-    #button-stop {
-
-    text-decoration:none;
-    width:50%;
-    margin-left: 25%;
-    text-align:center;
-    display:block;
-    background-color:#e74c3c;
-    color:#fff;
-    border:1px solid #FFCB00;
-
-    font-size:20px;
-    cursor:pointer;
-    border-radius:5px
     }
 
-    #button-reset{
-    text-decoration:none;
-    width:50%;
-    margin-left: 25%;
-    text-align:center;
-    display:block;
-    background-color:#e9d460;
-    color:#fff;
-    border:1px solid #FFCB00;
-
-    font-size:20px;
-    cursor:pointer;
-    border-radius:5px
-    }
-    #newWindow{
-      width: 800px;
-      height: 600px;
-      background-color: #36454F;
-      left: 50%;
-      margin-left: -25%;
-      border-radius: 5%;
-      border:4px solid #fff;
-    }
-    #button-close{
-      background-color: #e74c3c;
-      color: #ffffff;
-      float: right;
     }
     #content{
       margin-top: 50%;
@@ -119,7 +32,6 @@
       margin-bottom: 50px
 
     }
-
     #toggle-one{
       height: 75px;
       width: 75px;
@@ -136,7 +48,7 @@
     }*/
 
 
-    * The switch - the box around the slider */
+/* The switch - the box around the slider */
 .switch {
   position: relative;
   display: inline-block;
