--- a/frontend/swag/statistics.html
+++ b/frontend/swag/statistics.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <!-- The following scripts are different libraries used-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/0.2.0/Chart.min.js" type="text/javascript"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -7,107 +8,20 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js'></script>
   <style>
   @import "http://fonts.googleapis.com/css?family=Raleway";
-  #abc {
-    width:100%;
-    height:100%;
-    opacity:.85;
-    top:0;
-    left:0;
-    display:none;
-    position:fixed;
-    background-color:#a8a8a8;
-    overflow:auto
-  }
-
-  div#popupContact {
-    position:absolute;
-    left:50%;
-    top:17%;
-    margin-left:-202px;
-    font-family:'Raleway',sans-serif
-  }
-
-  hr {
+/*
+The following styling for the lines are to divide the screen nicely.
+*/
+hr {
     margin:10px 60px;
     margin-left: 8%;
     border:0;
     border-top:1px solid #ccc
   }
-
-
-  #timeStamp{
-    text-align: center;
-    color: #ffffff
-  }
-  #button-start {
-    text-decoration:none;
-    width:50%;
-    margin-left: 25%;
-    text-align:center;
-    display:block;
-    background-color:#2ecc71;
-    color:#fff;
-    border:1px solid #FFCB00;
-
-    font-size:20px;
-    cursor:pointer;
-    border-radius:5px
-  }
-
-  #popupContact{
-    align-content: bottom;
-  }
-  #wrapper{
+#wrapper{
     text-align: center;
     align-content: center;
+}
 
-
-
-  }
-  #button-stop {
-
-    text-decoration:none;
-    width:50%;
-    margin-left: 25%;
-    text-align:center;
-    display:block;
-    background-color:#e74c3c;
-    color:#fff;
-    border:1px solid #FFCB00;
-
-    font-size:20px;
-    cursor:pointer;
-    border-radius:5px
-  }
-
-  #button-reset{
-    text-decoration:none;
-    width:50%;
-    margin-left: 25%;
-    text-align:center;
-    display:block;
-    background-color:#e9d460;
-    color:#fff;
-    border:1px solid #FFCB00;
-
-    font-size:20px;
-    cursor:pointer;
-    border-radius:5px
-  }
-  #newWindow{
-    width: 800px;
-    height: 600px;
-    background-color: #36454F;
-    left: 50%;
-    margin-left: -25%;
-    border-radius: 5%;
-    border:4px solid #fff;
-  }
-  #button-close{
-    background-color: #e74c3c;
-    color: #ffffff;
-    float: right;
-  }
   #content{
     margin-top: 50%;
   }
@@ -117,6 +31,7 @@
 
   </style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--The following links are for CSS libraries that are used. -->
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -124,15 +39,17 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 <body id="body" style="overflow:hidden;">
+ <!-- The following div deals with the side bar nav. THis includes the close button and the home settings and stats button.-->
   <div class="w3-sidebar w3-bar-block w3-card-2 w3-animate-left" style="display:none" id="mySidebar">
 
     <button style = "float: right; border-radius: 50%;border:1px solid #000;"type="button" class="btn btn-danger btn-xs" onclick="w3_close()">X</button><br/>
 
-    <a href="newDash.HTML" class="w3-bar-item w3-button w3-padding-16" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif">home<i class="glyphicon glyphicon-home" style = "float: right;"></i></a>
+    <a href="nightDash.HTML" class="w3-bar-item w3-button w3-padding-16" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif">home<i class="glyphicon glyphicon-home" style = "float: right;"></i></a>
     <a href="newSettings.HTML" class="w3-bar-item w3-button w3-padding-16" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif">settings<i class="glyphicon glyphicon-user" style = "float: right;"></i></a>
 
     <a href="statistics.HTML" class="w3-bar-item w3-button w3-padding-24" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif">statistics<i class="glyphicon glyphicon-file" style = "float: right;"></i></a>
   </div>
+  <!-- THIS IS THE END OF THE SIDE BAR NAV -->
 
   <div zclass="w3-main" id="main" class = "animated fadeIn">
 
@@ -148,8 +65,9 @@
 
       <div class="container">
 
+        <!--This div contains the information regarding the ACTUAL stats...-->
         <div class="dropdown">
-
+            <!--title of the page..below that is the canvas for the graph and also the drop down menu for the LINE GRAPH-->
             <p style = "text-align: center;font-size: 14px;"><u>comphrensive data</u></p>
           <canvas style = "margin-left: 24%;" id="myChart"></canvas></br>
           <p style = "margin-left: 35%; margin-top: 2%; font-size: 16px;">please select a data set you would like to view:</p>
@@ -159,9 +77,10 @@
             <option value = "line3">average appointment time per month</option>
           </select>
           </div>
-
+          <!--this is the end of the first LINE GRAPH dropdown section...there is a break and another line after this section for aethestics.-->
         </div><br/>
           <hr style = "margin:5px 5px; margin-left: 20%; margin-right: 20%;border:0;border-top:1px solid #000;"/></br>
+          <!--dropdown2 div contains the graph (canvas) and drop down menu for the PIE GRAPH-->
         <div class ="dropdown2">
 
           <p style = "text-align: center;font-size: 14px;"><u>real-time data</u></p>
@@ -173,6 +92,9 @@
             <option value = "pie3">time distribution for doctor B</option>
           </select>
         </div><br/>
+        <!--END OF THE PIE GRAPH DROPDOWN SECTION-->
+
+        <!--OVERVIEW DATA...STILL IN PROGRESS...-->
         <hr style = "margin:5px 5px; margin-left: 20%; margin-right: 20%;border:0;border-top:1px solid #000;"/></br>
         <div class = "overview">
             <p style = "text-align: center;font-size: 14px;"><u>overview data</u></p>
@@ -186,7 +108,7 @@
 
     </div>
     <script>
-
+    //THE FUNCTIONS CLOSE AND OPEN PUSHES THE SIDEBAR NAV TO THE MAIN CONTENT OF THE SCREEN...
     function w3_open() {
       document.getElementById("main").style.marginLeft = "20%";
       document.getElementById("mySidebar").style.width = "20%";
@@ -199,8 +121,11 @@
       document.getElementById("mySidebar").style.display = "none";
       document.getElementById("openNav").style.display = "inline-block";
     }
+    //END OF THE FUNCTIONS CLOSE AND OPEN
 
     //GRAPHS AND STATISTICS JAVA SCRIPT PART!!!!
+
+    //GRAPH FOR LINE chart
     var ctx = document.getElementById("myChart").getContext("2d");
     ctx.canvas.width = 600;
     ctx.canvas.height = 200;
@@ -209,7 +134,7 @@
     ctx2.canvas.width = 600;
     ctx2.canvas.height = 200;
 
-
+    //THIS IS THE BRUTE FORCED DATA FOR THE DIFFERENT LINE GRAPHS. DIFFERENT DATA TO SHOW THAT THE GRAPH changed
     var dataMap = {
       'line': {
         method: 'Line',
@@ -255,7 +180,9 @@
 
 
       }};
+      //END OF THE LINE GRAPH DATA
 
+      //START OF LINE GRAPH SCRIPT
       var currentChart;
 
       function updateChart() {
@@ -269,8 +196,11 @@
 
       $('#chartType').on('change', updateChart)
       updateChart();
-      //THIS IS THE END OF THE GRAPH script
+      //THIS IS THE END OF THE LINE GRAPH script
+
       //THIS IS THE START OF THE PIE GRAPH SCRIPT
+
+      //THIS IS THE BRUTE FORCED DATA FOR THE PIE GRAPH TO SHOW THAT IT CAN BE changed BASED ON THE DIFFERENT options.
       var dataMap2 = {
 
        'pie': {
@@ -332,7 +262,7 @@
            }]
        }
    };
-
+   //END OF BRUTE FORCED DATA
 
         var currentPieChart;
 
