--- a/frontend/swag/nightDash.html
+++ b/frontend/swag/nightDash.html
@@ -2,9 +2,6 @@
   <head>
     <style>
     @import "http://fonts.googleapis.com/css?family=Raleway";
-    /*
-    The following #abc tag is a style tag that sets the gray backscreen and the opacity of the entire div. Which includes the popupContact.
-    */
     #abc {
     width:100%;
     height:100%;
@@ -16,9 +13,7 @@
     background-color:#a8a8a8;
     overflow:auto
     }
-    /*
-    The following is the style for the popout screen.
-    */
+
     div#popupContact {
     position:absolute;
     left:50%;
@@ -26,16 +21,10 @@
     margin-left:-202px;
     font-family:'Raleway',sans-serif
     }
-    /*
-    The following is the styling for the minutes, seconds, and miliseconds part of the popup screen
-    */
     #timeStamp{
       text-align: center;
       color: #ffffff
     }
-    /*
-      The following the style for the start button.
-    */
     #button-start {
     text-decoration:none;
     width:50%;
@@ -61,9 +50,6 @@
 
 
     }
-    /*
-      The following the style for the stop button.
-    */
     #button-stop {
 
     text-decoration:none;
@@ -79,9 +65,7 @@
     cursor:pointer;
     border-radius:5px
     }
-    /*
-      The following the style for the stop button.
-    */
+
     #button-reset{
     text-decoration:none;
     width:50%;
@@ -96,9 +80,6 @@
     cursor:pointer;
     border-radius:5px
     }
-    /*
-      The following the style for the button that comes out.
-    */
     #newWindow{
       width: 800px;
       height: 600px;
@@ -108,9 +89,6 @@
       border-radius: 5%;
       border:4px solid #fff;
     }
-    /*
-      The following closes the popout screen.
-    */
     #button-close{
       background-color: #e74c3c;
       color: #ffffff;
@@ -129,9 +107,7 @@
     #container{
         margin-right: 20px;
     }
-    /*
-      The following contentPages 1-6 are the background pictures for each div.
-      */
+
     #contentPage{
       background-image: url("step1.jpg");
       z-index: -2;
@@ -156,9 +132,7 @@
       background-image: url("step6.jpg");
       z-index: -2;
     }
-    /*
-    The following layer styles (layer 1-6) and (layer1-6:hover) are the color overlay for the divs. The hover tags include the transition hover of the div.
-    */
+
     #layer1{
     z-index: -1;
     background: rgba(231, 76, 60, 0.5);
@@ -272,7 +246,6 @@
 
     }
     </style>
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -309,14 +282,13 @@
     <div id="popupContact">
 
     <!-- Contact Us Form -->
-    <!-- The following div is the window that pops out...it includes the optum logo and the graphic picture which are right next to each other.-->
     <div id = "newWindow" class = "animated zoomIn">
       <div id = "wrapper">
         <button id = "button-close" onclick ="div_hide()" style = "border-radius: 50%; margin-right: 1%; margin-top: 1%;">X</button>
         <img src="optum.png" id = "hello" alt="optum" style="width:250px;height:80px;margin-left:-2%"><br>
 
         <img src="graphic.jpg" id = "graphic" alt="graphic" style="width:250px;height:250px;border-radius:50%;margin-top:2%">
-        <!--Time stamp is the minutes, seconds, miliseconds-->
+
         <p id = "timeStamp" style>
           <span id="mins" style = "font-size: 48px;color: #ffffff;">00</span>:
           <span id="seconds" style = "font-size: 48px;color: #ffffff">00</span>:
@@ -324,7 +296,6 @@
         </p>
       </div>
     <hr>
-      <!-- The group buttons are the start, stop, and reset button that are grouped together for styling purposes. -->
       <div id = "groupButton">
     <a href="javascript:%20check_empty()" id="button-start">START</a><br>
     <a href="javascript:%20check_empty()" id="button-stop">STOP</a><br>
@@ -332,13 +303,15 @@
     </div>
      </div>
 
+
+    </form>
     </div>
     <!-- Popup Div Ends Here -->
     </div>
     <!-- Display Popup Button -->
     <!-- Navigation -->
-    <!--The following content pages are the different div and secotions that you can click. By clicking it will bring up the popup - timer window-->
-    <div a href = " " onclick = "div_show()" id = "contentPage" style = "height: 35%; background-size: cover;background-position: center;background-repeat: no-repeat; border:4px solid #000;">
+
+    <div a href = " " onclick = "div_show()" id = "contentPage" style = "height: 4%; background-size: cover;background-position: center;background-repeat: no-repeat; border:4px solid #000;">
           <h1 style = "float: right; color: white;margin-right: 2%; z-index: 1; margin-top: 16%; overflow: none;"><b>physical timer</b></h1>
             <div id = "layer1" style = "z-index: -1;">
 
@@ -346,14 +319,14 @@
 
 
     </div>
-    <div a href = " " onclick = "div_show()" id = "contentPage2" style = "height: 35%; background-size: cover;background-position: center;background-repeat: no-repeat;border:4px solid #000;">
+    <div a href = " " onclick = "div_show()" id = "contentPage2" style = "height: 17%; background-size: cover;background-position: center;background-repeat: no-repeat;border:4px solid #000;">
       <h1 style = "float: right; color: white;margin-right: 2%; z-index: 1; margin-top: 16%; overflow: none;"><b>operation timer</b></h1>
         <div id = "layer2" style = "z-index: -1;">
 
         </div>
     </div>
 
-    <div a href = " " onclick = "div_show()" id = "contentPage3" style = "height: 35%; background-size: cover;background-position: center;background-repeat: no-repeat;border:4px solid #000;">
+    <div a href = " " onclick = "div_show()" id = "contentPage3" style = "height: 17%; background-size: cover;background-position: center;background-repeat: no-repeat;border:4px solid #000;">
       <h1 style = "float: right; color: white;margin-right: 2%; z-index: 1; margin-top: 16%; overflow: none;"><b>blood timer</b></h1>
         <div id = "layer3" style = "z-index: -1;">
 
@@ -380,7 +353,7 @@
 
         </div>
     </div>
-  <!-- THIS IS THE END OF THE DIV BUTTONS FOR THE DASHBOARD-->
+
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
@@ -426,17 +399,15 @@ var buttonStop = document.getElementById('button-stop');
 var buttonReset = document.getElementById('button-reset');
 var Interval ;
 
-//This function clears the interval for the minutes and starts the timer.
 buttonStart.onclick = function() {
 
    clearInterval(Interval);
    Interval = setInterval(startTimer, 10);
 }
-//This stops the interval.
-buttonStop.onclick = function() {
+
+  buttonStop.onclick = function() {
      clearInterval(Interval);
 }
-//This function resets the timer.
 buttonReset.onclick = function() {
    clearInterval(Interval);
   tens = "00";
@@ -446,7 +417,6 @@ buttonReset.onclick = function() {
   appendSeconds.innerHTML = seconds;
   appendMinute.innerHTML = minute;
 }
-//THE FOLLOWING FUNCTION IS THE TIMER ALGORITHM TO MAKE IT COUNT UP.
 function startTimer () {
   tens++;
 
@@ -480,8 +450,14 @@ function startTimer () {
 
 }
 }
-//THIS IS THE END OF THE startTIMER METHOD.
-
+function check_empty() {
+if (document.getElementById('name').value == "" || document.getElementById('email').value == "" || document.getElementById('msg').value == "") {
+alert("Fill All Fields !");
+} else {
+document.getElementById('form').submit();
+alert("Form Submitted Successfully...");
+}
+}
 //Function To Display Popup
 function div_show() {
 document.getElementById('abc').style.display = "block";
