--- a/backend/SampleConnection/getFunctions.html
+++ b/backend/SampleConnection/getFunctions.html
@@ -15,8 +15,11 @@
 
         <script>
 
-        $('#get_status')
+        $('#time_each_doc_each_task').click(function() {
+            $.ajax({
 
+            });
+        });
 
                  $('#see').click(function () {
                         var $friends = $("#friends");
