hash test and all bower components

--- a/backend/SampleConnection/hashTest.html
+++ b/backend/SampleConnection/hashTest.html
@@ -5,4 +5,4 @@
 <script type="text/javascript" src="../../bower_components/crypto-js/crypto-js.js"></script> 
  <script src="hashTest.js"></script> 
 </head>
- <button type="button" id="click" onclick="signIn()">Click Me!</button> 
+ <button type="button" id="click" onclick="here()">Click Me!</button> 
