testing call in azure

--- a/backend/SampleConnection/connect.html
+++ b/backend/SampleConnection/connect.html
@@ -38,7 +38,7 @@
       var $friends = $("#friends");
       $.ajax({
         type: 'GET',
-        url: 'http://localhost:3000/portal/present/providers/active',
+        url: 'http://optimistics.mhars1.optum.com/portal/present/providers/active',
         contentType: 'application/x-www-form-urlencoded',
         jsonpCallback: 'callback', 
         dataType : 'jsonp',   //you may use jsonp for cross origin request
